fix title alignment

--- a/template.css
+++ b/template.css
@@ -38,6 +38,7 @@ h1 {
 }
 h2 {
     font-size: 20pt;
+    margin-right: 107px;
     font-weight: 400;
 }
 h3 {
